# BaudSniffer

./: .pre-commit-config.yaml  BaudSniffer.py  README.md  pyproject.toml  setup.txt  unittests.py
.github/workflows/: python-tests.yml
tests/: test_BaudSniffer.py
